--- a/index.html
+++ b/index.html
@@ -47,10 +47,36 @@
         </div>
     </aside>
     <main>
-        MAIN
+        <div id='courses-list'>
+            <h1 id='heading' class='heading'>Phones on Sale</h1>
+            <div class='card'>
+                <img src='' class='phone-image'>
+                <div class='info-card'>
+                    <h4>Apple</h4>
+                    <p>James Brown</p>
+                    <img src=''>
+                    <p class='price'>$400 <span>$300</span></p>
+                    <a href='#' class='button primary button input add-to-cart' data-id='1'>Add to Cart</a>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer>
-        FOOTER
+    <footer id='footer' class='footer'>
+        <div class= 'footer-primary'>
+            <nav id='primary' class='menu'>
+                <a class='link' href='#'>For Business</a>
+                <a class='link' href='#'>Become a Seller</a>
+                <a class='link' href='#'>Support</a>
+                <a class='link' href='#'>Help</a>
+            </nav>
+        </div>
+        <div class='footer-secondary'>
+            <nav id='secondary' class='menu'>
+                <a class='link' href='#'>About us</a>
+                <a class='link' href='#'>Work with us</a>
+                <a class='link' href='#'>Blog</a>
+            </nav>
+        </div>
     </footer>
     </div>
     <script src='app.js'></script>
