--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class= 'container'>
     <header>
         <div class='main-logo'>
-            <img src='img/logo.jpg' id='logo'>
+            <img src='uploads/logo.jpg' id='logo'>
         </div>
         <div class= 'visible-shopping'>
             <ul>
                 <li class = 'submenu'>
-                    <img src='img/cart.png' id='img-car'>
+                    <img src='uploads/cart.png' id='img-car'>
                     <div id='shopping-cart'>
                         <table>
                             <thead>
@@ -52,12 +52,15 @@
             <div class='card'>
                 <img src='' class='phone-image'>
                 <div class='info-card'>
-                    <h4>Apple</h4>
-                    <p>James Brown</p>
+                    <h4>Apple iPhone 5c</h4>
+                    <p></p>
                     <img src=''>
                     <p class='price'>$400 <span>$300</span></p>
                     <a href='#' class='button primary button input add-to-cart' data-id='1'>Add to Cart</a>
                 </div>
+            </div>
+            <div id='card'>
+                
             </div>
         </div>
     </main>
