map() phone data

--- a/index.html
+++ b/index.html
@@ -49,17 +49,7 @@
     <main>
         <div id='courses-list'>
             <h1 id='heading' class='heading'>Phones on Sale</h1>
-            <div class='card'>
-                <img src='' class='phone-image'>
-                <div class='info-card'>
-                    <h4>Apple iPhone 5c</h4>
-                    <p></p>
-                    <img src=''>
-                    <p class='price'>$400 <span>$300</span></p>
-                    <a href='#' class='button primary button input add-to-cart' data-id='1'>Add to Cart</a>
-                </div>
-            </div>
-            <div id='card'>
+            <div id='card' class='cards'>
                 
             </div>
         </div>
