fixed hidden card

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class= 'visible-shopping'>
             <ul>
                 <li class = 'submenu'>
-                    <img src='uploads/cart.png' id='img-car'>
+                    <img src='uploads/cart.png' id='img-card'>
                     <div id='shopping-cart'>
                         <table>
                             <thead>
