--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </aside>
     <main>
         <div id='courses-list'>
-            <h1 id='heading' class='heading'>Phones on Sale</h1>
+            <h1 id='heading' class='heading'>Phones for Sale</h1>
             <div id='card' class='cards'>
-                
+
             </div>
         </div>
     </main>
