--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li class = 'submenu'>
                     <img src='uploads/cart.png' id='img-card'>
                     <div id='shopping-cart'>
-                        <table>
+                        <table id='cart-content'>
                             <thead>
                                 <tr>
                                     <th>Image</th>
@@ -30,7 +30,7 @@
                             </thead>
                             <tbody></tbody>
                         </table>
-                        <a href='#'>Clear Cart</a>
+                        <a href='#' id='clear-cart'>Clear Cart</a>
                     </div>
                 </li>
             </ul>
