added oninput  event to input

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2>Buy a phone today</h2>
             <p>Lowest prices everyday</p>
             <form action='#' id='search'  class='form'>
-                <input type='text' placeholder="What do you want to buy?" id='search-phone'>
+                <input oninput='searchPhones()' type='text' placeholder="What do you want to buy?" id='search-phone'>
                 <input type='submit' id='submit-search-phone' class='submit-search-phone'>
             </form>
         </div>
