footer buttons css fix

--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
     <footer id='footer' class='footer'>
         <div class= 'footer-primary'>
             <nav id='primary' class='menu'>
-                <a class='link' href='#'>For Business</a>
-                <a class='link' href='#'>Become a Seller</a>
-                <a class='link' href='#'>Support</a>
-                <a class='link' href='#'>Help</a>
+                <a class='link'>For Business</a>
+                <a class='link'>Become a Seller</a>
+                <a class='link'>Support</a>
+                <a class='link'>Help</a>
             </nav>
         </div>
         <div class='footer-secondary'>
             <nav id='secondary' class='menu'>
-                <a class='link' href='#'>About us</a>
-                <a class='link' href='#'>Work with us</a>
-                <a class='link' href='#'>Blog</a>
+                <a class='link'>About us</a>
+                <a class='link'>Work with us</a>
+                <a class='link'>Blog</a>
             </nav>
         </div>
     </footer>
